# opentelemetrytest_rust

./: Cargo.toml
src/: main.rs
